--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat:wght@400;700&display=swap");
 @keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #a66161, 0 0 40px #a66161;
@@ -43,12 +42,12 @@
 }
 #es-RC-container .es-hero__left--headline {
   color: white;
-  font-family: "gotham-condensed-bold", "Open Sans", sans-serif;
+  font-family: "Barlow Condensed", "Helvetica", sans-serif;
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
   line-height: 0.9;
-  font-size: 36px;
+  font-size: clamp(3.25rem, 3.0625rem + 1vw, 3.875rem);
   text-shadow: 4px 2px 4px #a66161;
   transform: rotate(355deg) skew(-5deg, 0deg);
 }
@@ -56,7 +55,7 @@
   animation: glow 2s ease-in-out infinite alternate;
 }
 #es-RC-container .es-hero__left--smaller {
-  font-size: 16px;
+  font-size: clamp(1.5rem, 1.3125rem + 1vw, 2.125rem);
   margin-top: 4px;
   margin-bottom: 50px;
 }
@@ -92,7 +91,8 @@
   max-width: fit-content;
   padding: 0.2rem;
   transform: rotate(355deg) skew(-5deg, 0deg);
-  font-family: "gotham-condensed-bold", "Open Sans", sans-serif;
+  font-family: "Barlow Condensed", "Helvetica", sans-serif;
+  font-size: 24px;
   position: absolute;
   top: 0px;
   left: 110px;
