--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,5 @@
-// import Montserrat
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap");
+// import Montserrat and Barlow Condensed
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat:wght@400;700&display=swap');
 
 // color variables
 $color--main: #f08365;
@@ -11,7 +10,7 @@ $color--accent-3: #267b32;
 
 // font variables
 $ff--montserrat: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
-$ff--gotham: "gotham-condensed-bold", "Open Sans", sans-serif;
+$ff--barlow: 'Barlow Condensed', "Helvetica", sans-serif;
 $fw--regular: 400;
 $fw--bold: 700;
 $ft--italic: italic;
@@ -168,10 +167,7 @@ $padding--XXL: 6rem;
   }
   // reset end
   .es-hero {
-    //min-height: 300px;
     position: relative;
-    //background-image: url("#{$file-path}bg-juicy-pineapple#{$img-format}");
-    //@include bg-cover(right bottom);
     @include flex(column-reverse, center);
     &__left {
       background-image: url("#{$file-path}bg-hero-desktop#{$img-format}");
@@ -181,13 +177,12 @@ $padding--XXL: 6rem;
 
       &--headline {
         color: white;
-        font-family: $ff--gotham;
+        font-family: $ff--barlow;
         text-transform: uppercase;
         text-align: center;
         font-weight: 700;
         line-height: 0.9;
-        // font-size: clamp(1.5rem, 0.8553rem + 2.9474vw, 3.25rem);
-        font-size: 36px;
+        font-size: clamp(3.25rem, 3.0625rem + 1vw, 3.875rem);
         text-shadow: $txt-shadow;
         transform: rotate(355deg) skew(-5deg, 0deg);
         & span {
@@ -195,7 +190,7 @@ $padding--XXL: 6rem;
         }
       }
       &--smaller {
-        font-size: 16px;
+        font-size: clamp(1.5rem, 1.3125rem + 1vw, 2.125rem);
         margin-top: 4px;
         margin-bottom: 50px;
       }
@@ -225,7 +220,8 @@ $padding--XXL: 6rem;
         max-width: fit-content;
         padding: 0.2rem;
         transform: rotate(355deg) skew(-5deg, 0deg);
-        font-family: $ff--gotham;
+        font-family: $ff--barlow;
+        font-size: 24px;
         position: absolute;
         top: 0px;
         left: 110px;
