fix access paths

--- a/3600542500395/style/style.scss
+++ b/3600542500395/style/style.scss
@@ -35,7 +35,7 @@ $txt-stroke--accent: -1px 1px 0 $color--accent-2, 1px 1px 0 $color--accent-2,
 
 // utility variables
 // images
-$file-path: "./img/";
+$file-path: "../images/";
 $img-format: ".png";
 
 // padding
