--- a/3600542500395/style/style.css
+++ b/3600542500395/style/style.css
@@ -31,7 +31,7 @@
   justify-content: center;
 }
 #es-RC-container .es-hero__left {
-  background-image: url("./img/bg-hero-desktop.png");
+  background-image: url("../images/bg-hero-desktop.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left;
@@ -60,7 +60,7 @@
   margin-bottom: 50px;
 }
 #es-RC-container .es-hero__right {
-  background-image: url("./img/bg-R-juicy-pineapple.png");
+  background-image: url("../images/bg-R-juicy-pineapple.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
@@ -194,7 +194,7 @@
   position: relative;
 }
 #es-RC-container .es-how__title {
-  background-image: url("./img/bg-hair-mask.png");
+  background-image: url("../images/bg-hair-mask.png");
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -350,7 +350,7 @@
   text-transform: uppercase;
   font-size: clamp(1.625rem, 1.4rem + 1.2vw, 2rem);
   color: white;
-  background-image: url("./img/bg-routine.png");
+  background-image: url("../images/bg-routine.png");
   padding: 2rem;
 }
 #es-RC-container .es-routine__header span {
@@ -437,7 +437,7 @@
   top: 50%;
   width: 90%;
   padding-block: 2rem;
-  background-image: url("./img/recycle-symbol.png");
+  background-image: url("../images/recycle-symbol.png");
   background-color: white;
   background-size: contain;
   background-repeat: no-repeat;
@@ -605,7 +605,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url("./img/bg-hero-desktop.png");
+    background-image: url("../images/bg-hero-desktop.png");
   }
   #es-RC-container .es-hero__left {
     background-image: none;
@@ -664,7 +664,7 @@
     position: relative;
   }
   #es-RC-container .es-ingredients__container--inner::after {
-    content: url("./img/arrow-black.png");
+    content: url("../images/arrow-black.png");
     display: block;
     position: absolute;
     scale: 0.6;
@@ -679,7 +679,7 @@
     margin-bottom: -6rem;
   }
   #es-RC-container .es-ingredients__single:nth-of-type(1)::before {
-    content: url("./img/arrow-black.png");
+    content: url("../images/arrow-black.png");
     display: block;
     position: absolute;
     scale: 0.7;
@@ -697,7 +697,7 @@
     margin-bottom: -80px;
   }
   #es-RC-container .es-routine__bg {
-    background-image: url("./img/bg-routine.png");
+    background-image: url("../images/bg-routine.png");
     background-size: contain;
     background-repeat: no-repeat;
     padding-top: 2rem;
@@ -760,7 +760,7 @@
 }
 @media screen and (min-width: 730px) {
   #es-RC-container .es-how {
-    background-image: url("./img/bg-hair-mask.png");
+    background-image: url("../images/bg-hair-mask.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -780,7 +780,7 @@
     left: 3%;
   }
   #es-RC-container .es-how__item--1:after {
-    content: url("./img/arrow-white.png");
+    content: url("../images/arrow-white.png");
     display: block;
     scale: 0.7;
     rotate: 184deg;
@@ -793,7 +793,7 @@
     right: 3%;
   }
   #es-RC-container .es-how__item--2:before {
-    content: url("./img/arrow-white.png");
+    content: url("../images/arrow-white.png");
     display: block;
     scale: 0.8;
     rotate: -15deg;
@@ -806,7 +806,7 @@
     right: 3%;
   }
   #es-RC-container .es-how__item--3:before {
-    content: url("./img/arrow-white.png");
+    content: url("../images/arrow-white.png");
     display: block;
     scale: 0.6;
     rotate: 177deg;
